Infrastructure/Development/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/service-one" }
                route: { prefix_rewrite: "/", cluster: service_one }
              - match: { prefix: "/service-two" }
                route: { prefix_rewrite: "/", cluster: service_two }
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: service_one
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_one
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: serviceoneapi
                port_value: 80
  - name: service_two
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_two
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: servicetwoapi
                port_value: 80
